fixed deprecated feature